--- a/address.html
+++ b/address.html
@@ -30,23 +30,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body id="address">
+<body id="address" data-spy="scroll" data-target=".navbar" data-offset="70">
+
     <div id="back">
         <div id='stars'></div>
         <div id='stars2'></div>
         <div id='stars3'></div>
     </div>
 
-    <nav class="navbar sticky-top navbar-expand navbar-light">
-        <a class="navbar-brand page-scroll" href="#page-top">
-            <img id="logo" src="img/logo.svg" class="img-responsive" alt="Guld Market">
+    <nav class="navbar sticky-top navbar-expand-sm navbar-light">
+        <a class="navbar-brand page-scroll" href="/">
+            <img id="logo" src="/img/logo.svg" class="img-responsive" alt="Guld Market">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-            aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
+            <!--<ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#section-team">About</a>
                 </li>
@@ -56,72 +56,136 @@
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#section-papers">Support</a>
                 </li>
-            </ul>
+            </ul>-->
         </div>
     </nav>
 
-    <section class="main">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6 col-xl-4">
-                    <div id="qrinstructions">
-                        Please complete the payment from your registered BTC account to the BTC address below in the allotted Time.
-                    </div>
-                    <div id="qrcode"></div>
-                </div>
-                <div id="clock" class="col-md-6 col-xl-4 text-center">
-                    <div class="clock-number">
-                        <div class="number" id="minutes"></div>
-                        <div class="circle"></div>
-                    </div>
-                    <div class="clock-number">
-                        <div class="number" id="seconds"></div>
-                        <div class="circle"></div>
-                    </div>
-                </div>
-                <div id="info" class="col-md-6 col-xl-4 ">
-                    <div id="transaction">
-                        <div class="asset text-center">Deposit
-                            <p>
-                                <img src="img/btc.svg">
-                            </p>
-                            <p>0.0007</p>
-                        </div>
-                        <div class="asset text-center">Receive
-                            <p>
-                                <img src="img/ico.svg">
-                            </p>
-                            <p>70</p>
-                        </div>
+    <div class="container-fluid">
 
-                        <div class="line">
-                            <label>Guld Recepient Account</label>
-                            <img src="img/user.svg">
-                            <p>srcreativo</p>
+        <section class="main">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6 col-xl-4">
+                        <div id="qrinstructions">
+                            Please complete the payment from your registered BTC account to the BTC address below in the allotted Time.
                         </div>
-                        <div class="line">
-                            <label>Account to deposit</label>
-                            <img src="img/wallet.svg">
-                            <p>1E1qxdDyJ4Hs8X179T5ZzgepPoMzZuWz8e</p>
+                        <div id="qrcode"></div>
+                    </div>
+                    <div id="clock" class="col-md-6 col-xl-4 text-center">
+                        <div class="clock-number">
+                            <div class="number" id="minutes"></div>
+                            <div class="circle"></div>
                         </div>
-                        <div id="download">
-                            <a class="btn btn-primary">
+                        <div class="clock-number">
+                            <div class="number" id="seconds"></div>
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                    <div id="info" class="col-md-6 col-xl-4 ">
+                        <div id="transaction">
+                            <div class="asset text-center">Deposit
+                                <p>
+                                    <img src="/img/btc.svg">
+                                </p>
+                                <p>0.0007</p>
+                            </div>
+                            <div class="asset text-center">Receive
+                                <p>
+                                    <img src="/img/ico.svg">
+                                </p>
+                                <p>70</p>
+                            </div>
+
+                            <div class="line">
+                                <label>Guld Recepient Account</label>
+                                <img src="img/user.svg">
+                                <p>srcreativo</p>
+                            </div>
+                            <div class="line">
+                                <label>Account to deposit</label>
+                                <img src="img/wallet.svg">
+                                <p>1E1qxdDyJ4Hs8X179T5ZzgepPoMzZuWz8e</p>
+                            </div>
+                            <div id="download">
+                                <a class="btn btn-primary">
                                 Download Contract
-                            </a>
-                            Download/link to copy of Human Good Sales Agreement.
+                            </a> Download/link to copy of Human Good Sales Agreement.
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <a href="#">
         <footer class="footer">
-            <img id="chat" src="img/chat.svg" alt="Support"> Support
+            <div class="row">
+                <div class="col-12 text-center">
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="https://guld.info">Learn</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://guld.tech">Tech</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://guld.legal">Legal</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://guld.gg">Games</a>
+                        </li>
+                    </ul>
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="https://t.me/guldblocktree">
+                                <i class="fab fa-telegram-plane"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://github.com/guldcoin">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://bitbucket.org/guld">
+                                <i class="fab fa-bitbucket"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.facebook.com/guldblocktree">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://twitter.com/guldcoin">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.reddit.com/r/guldblocktree/">
+                                <i class="fab fa-reddit"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.youtube.com/channel/UClVwx_qNPp1UmQEjabZWK5A">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.twitch.tv/guldblocktree">
+                                <i class="fab fa-twitch"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.instagram.com/guld.io/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="copytext">&copy; Guld. All rights reserved</div>
+                </div>
+            </div>
         </footer>
-    </a>
-    <!-- .footer -->
+        <!-- .footer -->
     </div>
 
     <!-- jquery -->
