color time warnings

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                             <div class="number" id="seconds"></div>
                             <div class="circle"></div>
                         </div>
-                        <div class="card-block">
-                            <h6 id="time-warning" class="card-title alert-success">Your GULD will be credited at the exchange rate given by <a href="https://coinmarketcap.com" target="_blank">coinmarketcap</a> at the start of the 15 minute window when the transaction is first witnessed by isysd, or when the first confirmation is received, whichever is first.</h6>
+                        <div id="time-warning" class="card-block">
+                            <h6 class="card-title alert-danger">Your GULD will be credited at the exchange rate given by <a href="https://coinmarketcap.com" target="_blank">coinmarketcap</a> at the start of the 15 minute window when the transaction is first witnessed by isysd, or when the first confirmation is received, whichever is first.</h6>
                         </div>
 
                     </div>
