color time warnings

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                                 <p>
                                     <img src="/img/btc.svg">
                                 </p>
-                                <p>0.0007</p>
+                                <p class="deposit-amount">0.0007</p>
                             </div>
                             <div class="asset text-center">Receive
                                 <p>
                                     <img src="/img/ico.svg">
                                 </p>
-                                <p>70</p>
+                                <p class="receive-amount">70</p>
                             </div>
                             <div id="download">
                                 <a class="btn btn-primary">
@@ -94,6 +94,7 @@
                     <div id="clock" class="col-md-6 col-xl-4 text-center">
                         <div class="card-block text-center">
                             <h2 class="card-title">2. Price</h2>
+                            <h6 class="card-title active-price"></h6>
                         </div>
                         <div class="clock-number">
                             <div class="number" id="minutes"></div>
