addresses and images

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                             <h3 class="card-title active-price"></h3>
                             <div class="asset text-center">Deposit
                                 <p>
-                                    <a data-toggle="modal" data-target="#quoteModal"><img src="/img/btc.svg"></a>
+                                    <a data-toggle="modal" data-target="#quoteModal"><img id="quote-logo-active" src="/img/btc.svg"></a>
                                 </p>
                                 <p class="deposit-amount">0.00014286</p>
                             </div>
                             <div class="asset text-center">Receive
                                 <p>
-                                    <a data-toggle="modal" data-target="#baseModal"><img src="/img/ico.svg"></a>
+                                    <a data-toggle="modal" data-target="#baseModal"><img id="base-logo-active" src="/img/ico.svg"></a>
                                 </p>
                                 <p class="receive-amount">1</p>
                             </div>
@@ -105,7 +105,7 @@
                         <div class="card-block text-center">
                             <h2 class="card-title">2. Pay</h2>
                         </div>
-                        <div class="card">
+                        <div class="card" id="qr-card">
                             <a href="dash://1FVa2fGZqVzDXer8HirMcKSbDcfR4R4zNK">
                                 <div class="card-block">
                                     <h4 class="card-title">1FVa2fGZqVzDXer8HirMcKSbDcfR4R4zNK</h4>
