--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                                 <p>
                                     <a data-toggle="modal" data-target="#quoteModal"><img id="quote-logo-active" src="/img/btc.svg"></a>
                                 </p>
-                                <p class="deposit-amount">0.00014286</p>
+                                <p id="deposit-amount">0.00014286</p>
                             </div>
                             <div class="asset text-center">Receive
                                 <p>
                                     <a data-toggle="modal" data-target="#baseModal"><img id="base-logo-active" src="/img/ico.svg"></a>
                                 </p>
-                                <p class="receive-amount">1</p>
+                                <p id="receive-amount">1</p>
                             </div>
                         </div>
                         <div class="text-center">
