--- a/index.html
+++ b/index.html
@@ -70,15 +70,18 @@
                             <h2 class="card-title">1. Market</h2>
                         </div>
 
-                        <div id="transaction">
+                        <div id="transaction" class="text-center">
                             <h3 class="card-title active-price"></h3>
-                            <div class="asset text-center">Deposit
+                            <div class="asset text-center">
                                 <p>
                                     <a data-toggle="modal" data-target="#quoteModal"><img id="quote-logo-active" src="/img/btc.svg"></a>
                                 </p>
                                 <p id="deposit-amount">0.00014286</p>
                             </div>
-                            <div class="asset text-center">Receive
+                            <div class="text-center" style="padding: 80px 0px 0px 5px; display: inline-block; vertical-align: top;">
+                                <i class="fas fa-arrow-right"></i>
+                            </div>
+                            <div class="asset text-center">
                                 <p>
                                     <a data-toggle="modal" data-target="#baseModal"><img id="base-logo-active" src="/img/ico.svg"></a>
                                 </p>
