mobile and url fixes

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                         <div id="time-warning" class="card-block">
-                            <h6 class="card-title alert-danger">Your GULD will be credited at the exchange rate given by <a href="https://coinmarketcap.com" target="_blank">coinmarketcap</a> at the start of the 15 minute window when the transaction is first witnessed. <a href="https://guld.legal/contract/template/trade/INTERNATIONAL_SALE_GOODS_U1000.html">Sales Agreement</a></h6>
+                            <h6 class="card-title alert-danger">Your <span class="base-asset">GULD</span> will be credited at the exchange rate given by <a href="https://coinmarketcap.com" target="_blank">coinmarketcap</a> at the start of the 15 minute window when the transaction is first witnessed. <a href="https://guld.legal/contract/template/trade/INTERNATIONAL_SALE_GOODS_U1000.html">Sales Agreement</a></h6>
                         </div>
 
                     </div>
