mobile and url fixes

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             <h2 class="card-title">3. Claim</h2>
                         </div>
                         <div class="card-block">
-                            <h6 class="card-title alert-danger">WARNING: You will be asked to provide <a href="proof-of-address.html">Proof of Address</a> to claim your GULD. You must have access to the private key of the sending address and must be able to sign your <a href="https://guld.io">guld</a> username with it.</h6>
+                            <h6 class="card-title alert-danger">WARNING: You will be asked to provide <a href="proof-of-address.html">Proof of Address</a> to claim your <span class="base-asset">GULD</span>. You must have access to the private key of the sending address and must be able to sign your <a href="https://guld.io">guld</a> username with it.</h6>
                         </div>
                     </div>
                 </div>
