--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div id="choose-pair" class="col-md-6 col-xl-4 ">
                         <div class="card-block text-center">
-                            <h2 class="card-title">1. Market</h2>
+                            <h2 class="card-title">1. Order</h2>
                         </div>
 
                         <div id="transaction" class="text-center">
