--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                         <div id="time-warning" class="card-block">
-                            <h6 class="card-title alert-danger">Your <span class="base-asset">GULD</span> will be credited at the exchange rate given by <a href="https://coinmarketcap.com" target="_blank">coinmarketcap</a> at the start of the 15 minute window when the transaction is first witnessed. <a href="https://guld.legal/contract/template/trade/INTERNATIONAL_SALE_GOODS_U1000.html">Sales Agreement</a></h6>
+                            <h6 class="card-title alert-danger">Your <span class="base-asset">GULD</span> will be credited at the exchange rate given by <a href="https://coinmarketcap.com" target="_blank">coinmarketcap</a> at the start of the 15 minute window when the transaction is first witnessed.</h6>
                         </div>
 
                     </div>
@@ -124,7 +124,7 @@
                             <h2 class="card-title">3. Claim</h2>
                         </div>
                         <div class="card-block">
-                            <h6 class="card-title alert-danger">WARNING: You will be asked to provide <a href="proof-of-address.html">Proof of Address</a> to claim your <span class="base-asset">GULD</span>. You must have access to the private key of the sending address and must be able to sign your <a href="https://guld.io">guld</a> username with it.</h6>
+                            <h6 class="card-title alert-danger">WARNING: You will be asked to provide <a href="proof-of-address.html">Proof of Address</a> to claim your <span class="base-asset">GULD</span>. You must have access to the private key of the sending address and must be able to sign the <a href="https://guld.legal/contract/template/trade/INTERNATIONAL_SALE_GOODS_U1000.html">Sales Agreement</a> with it.</h6>
                         </div>
                     </div>
                 </div>
