--- a/index.html
+++ b/index.html
@@ -129,17 +129,16 @@
                               <div class="form-group">
                                 <label for="signing-address">Signing address</label>
                                 <input type="text" class="form-control" id="signing-address" aria-describedby="addressHelp" placeholder="Your Address">
-                                <small id="addressHelp" class="form-text text-muted">This should be the address from which you sent the payment. You must have the private key to be able to complete this form.</small>
                               </div>
                               <div class="form-group">
-                                <label for="signed-message">Message (guld username or email please)</label>
+                                <label for="signed-message">Message</label>
                                 <input type="text" class="form-control" id="signed-message" placeholder="text">
                               </div>
                               <div class="form-group">
                                 <label for="signature">Signature</label>
                                 <input type="text" class="form-control" id="signature" placeholder="text">
                               </div>
-                              <button type="submit" class="btn btn-primary" onClick="sendProofOfAddress()">Submit</button>
+                              <button type="submit" class="btn btn-success" onClick="sendProofOfAddress()">Submit</button>
                             </form>
 
                         </div>
